Add styling to the header

--- a/courses/foundation/intro-to-using-ai/Intro to IA Assignment/styles.css
+++ b/courses/foundation/intro-to-using-ai/Intro to IA Assignment/styles.css
@@ -7,3 +7,11 @@ body {
   margin: 1rem;
   
 }
+
+
+header{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #333;
+}
