--- a/courses/foundation/intro-to-using-ai/Intro to IA Assignment/styles.css
+++ b/courses/foundation/intro-to-using-ai/Intro to IA Assignment/styles.css
@@ -8,10 +8,19 @@ body {
   
 }
 
-
 header{
     display: flex;
     align-items: center;
     justify-content: center;
     color: #333;
+}
+
+.container {
+  max-width: 37.5rem;
+  margin: 3.125rem auto;
+  padding: 3.125rem;
+  text-align: center;
+  background: white;
+  border-radius: 16px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
 }
