--- a/courses/foundation/intro-to-using-ai/Intro to IA Assignment/styles.css
+++ b/courses/foundation/intro-to-using-ai/Intro to IA Assignment/styles.css
@@ -55,3 +55,7 @@ button {
   cursor: pointer;
   transition: background-color 0.3s ease;
 }
+
+button:hover {
+  background-color: rgb(75, 58, 82);
+}
