--- a/courses/foundation/intro-to-using-ai/Intro to IA Assignment/styles.css
+++ b/courses/foundation/intro-to-using-ai/Intro to IA Assignment/styles.css
@@ -1,18 +1,17 @@
 body {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   margin: 0;
   padding: 0;
   background-color: #f0f4f8;
   color: #333;
   margin: 1rem;
-  
 }
 
-header{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: #333;
+header {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #333;
 }
 
 .container {
@@ -26,12 +25,13 @@ header{
 }
 
 h1 {
-    color: #555;
-   font-size: 2rem;
+  color:black;
+  font-size: 2rem;
 }
 
-h2,h3 {
-    font-size: 1.5rem;
+h2,
+h3 {
+  font-size: 1.5rem;
   color: #4e00cc;
 }
 
@@ -40,7 +40,8 @@ ul {
   padding: 0;
 }
 
-li,p {
+li,
+p {
   padding: 8px 0;
   font-size: 1rem;
 }
@@ -71,12 +72,13 @@ button:hover {
     font-size: 1.5rem;
   }
 
-  h2,h3 {
+  h2,
+  h3 {
     font-size: 1rem;
-}
+  }
 
-li,p {
-  font-size: 0.7rem;
-}
-
+  li,
+  p {
+    font-size: 0.7rem;
+  }
 }
